--- a/watchtv/client/package.json
+++ b/watchtv/client/package.json
@@ -20,7 +20,8 @@
     "react-easy-crop": "^5.2.0",
     "react-multi-carousel": "^2.8.5",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "react-toastify": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
